<resources>
    <string name="app_name">Lotti_Karotti_Online_App</string>

    <string name="login_title">Login</string>
    <string name="username_hint">Username</string>
    <string name="login_button">Login</string>

    <string name="open_room">Open_Room</string>
    <string name="join_room">Join_Room</string>
    <string name="rejoin_room">Rejoin_Room</string>
    <string name="instructions">Instructions</string>
    <string name="draw">draw card</string>
    <string name="round_1">Round: 1</string>
    <string name="player_it_s_your_turn">Player ... it\'s your turn</string>
    <string name="draw_card">Draw Card</string>
    <string name="guess_cheater">Guess Cheater</string>
    <string name="chat">Chat</string>
    <string name="remaining_rabbits">Remaining rabbits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openroom">OpenRoom</string>
    <string name="game_settings">Game Settings</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="enter_player_name">Enter player name</string>
    <string name="open_roomAndStart">Open Room</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="response">Response</string>
    <string name="player_name">Player name:</string>
    <string name="number_of_players">Number of players:</string>
    <string name="room_name">Room name:</string>
    <string name="join_room1">Join Room</string>
    <string name="enter_room_name1">Enter Room Name</string>
    <string name="enter_player_name1">Enter Player Name</string>
    <string name="joinButton">Join</string>
    <string name="refresh">Refresh</string>
    <string name="back_to_menu1">Back to menu</string>
    <string name="waiting_for_the_other_player">Waiting for the other player</string>
</resources>