<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.OpenRoomActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="390dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings"
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:background="@color/orange"
            android:gravity="center_horizontal"
            android:text="@string/game_settings"
            android:textAlignment="center"
            android:textColor="@color/darkGray"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/roomTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:text="@string/room_name"
            android:textColor="@color/darkGray"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextRoomName"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/enter_room_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextRoomName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:text="@string/number_of_players"
            android:textColor="@color/darkGray"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinnerNumPlayers"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextRoomName" />

        <TextView
            android:id="@+id/playerNameTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:text="@string/player_name"
            android:textColor="@color/darkGray"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextCreatorName"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/enter_player_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonOpenRoomNow"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/open_roomAndStart"
            android:textColor="@color/darkGray"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/back_to_menu"
            android:textColor="@color/darkGray"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewResponse"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/response"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"
            android:layout_marginStart="15dp"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rabbitmenu"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>